--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "functionlayer"
-version = "0.3.0"
+name = "functionlayer-ai"
+version = "0.2.0"
 description = "functionlayer"
 authors = ["functionlayer authors <dexter@metalytics.dev>"]
 repository = "https://github.com/functionlayer/functionlayer"
