--- a/examples/ts_email_classifier/package.json
+++ b/examples/ts_email_classifier/package.json
@@ -24,7 +24,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "dotenv": "^16.4.7",
-    "humanlayer": "0.7.0",
+    "humanlayer": "file:../../humanlayer-ts",
     "openai": "^4.0.0"
   },
   "devDependencies": {
