--- a/humanlayer-wui/package.json
+++ b/humanlayer-wui/package.json
@@ -13,7 +13,8 @@
     "format:check": "prettier --check .",
     "typecheck": "tsc --noEmit",
     "check": "bun run format:check && bun run lint && bun run typecheck",
-    "test": "bun test"
+    "test": "vitest",
+    "test:run": "vitest run"
   },
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.1.11",
@@ -56,6 +57,8 @@
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "@tauri-apps/cli": "^2",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/dompurify": "^3.0.0",
     "@types/lodash.keyby": "^4.6.9",
     "@types/node": "^24.0.1",
@@ -66,11 +69,13 @@
     "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
     "globals": "^16.2.0",
+    "jsdom": "^26.1.0",
     "prettier": "^3.5.3",
     "tw-animate-css": "^1.3.4",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.34.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vitest": "^3.2.4"
   },
   "trustedDependencies": [
     "@tailwindcss/oxide"
